--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "hyperlist": "^1.0.0-beta",
     "lodash": "^4.17.11",
     "vue": "^2.5.17",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
+    "vue-virtual-scroll-list": "^1.2.8",
+    "vue-virtual-scroller": "^1.0.0-beta.2",
     "vuetify": "^1.3.0"
   },
   "devDependencies": {
